examples/test/testpolicy10288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10288
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key6: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value44
          key9: value9
          key16: value42
      podSelector:
        matchLabels:
          key42: value36
          key22: value18
